--- a/bibliography.bib
+++ b/bibliography.bib
@@ -891,3 +891,16 @@ Vision and Pattern Recognition},
    type = {Journal Article}
 }
 
+@article{VariationalInference,
+	author = {Blei, David M and Kucukelbir, Alp and McAuliffe, Jon D},
+	title = {Variational inference: A review for statisticians},
+	journal = {Journal of the American statistical Association},
+	volume = {112},
+	number = {518},
+	pages = {859-877},
+	ISSN = {0162-1459},
+	year = {2017},
+	type = {Journal Article}
+}
+
+
